# logos-blockchain-circuits

./: .cargo-deny.toml  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  circuits-nix-hashes.json  flake.nix  justfile  rust-toolchain.toml  versions.nix
.github/actions/compile-witness-generator/: action.yml
.github/resources/prover/: Makefile
.github/resources/witness-generator/: Makefile
.github/workflows/: build-circuits.yml  ci.yml  lint.yml  test.yml
blend/: generate_inputs_for_poq.py  poq.circom  test_ffi.cpp
docs/: build-pipeline.md
mantle/: test_poc.cpp  test_pol.cpp  test_signature.cpp
misc/: comparator.circom
rust/: Cargo.toml  README.md
rust/logos-blockchain-circuits-build/: Cargo.toml
rust/logos-blockchain-circuits-build/src/: lib.rs
rust/logos-blockchain-circuits-common/: Cargo.toml
rust/logos-blockchain-circuits-common/src/: artifacts.rs  lib.rs  string.rs
rust/logos-blockchain-circuits-poc-sys/: Cargo.toml  build.rs  sample.input.json
rust/logos-blockchain-circuits-poc-sys/src/: ffi.rs  lib.rs  native.rs
rust/logos-blockchain-circuits-pol-sys/: Cargo.toml  build.rs  sample.input.json
rust/logos-blockchain-circuits-pol-sys/src/: ffi.rs  lib.rs  native.rs
rust/logos-blockchain-circuits-poq-sys/: Cargo.toml  build.rs  sample.input.json
rust/logos-blockchain-circuits-poq-sys/src/: ffi.rs  lib.rs  native.rs
rust/logos-blockchain-circuits-poq-sys/tests/: generate_witness.rs
rust/logos-blockchain-circuits-rapidsnark-sys/: Cargo.toml  build.rs
rust/logos-blockchain-circuits-rapidsnark-sys/src/: lib.rs
rust/logos-blockchain-circuits-signature-sys/: Cargo.toml  build.rs  sample.input.json
rust/logos-blockchain-circuits-signature-sys/src/: ffi.rs  lib.rs  native.rs
rust/logos-blockchain-circuits-tests/: Cargo.toml
rust/logos-blockchain-circuits-tests/src/: lib.rs
rust/logos-blockchain-circuits-tests/tests/: conflicts.rs
rust/logos-blockchain-circuits-types/: Cargo.toml
rust/logos-blockchain-circuits-types/src/: lib.rs
rust/logos-blockchain-circuits-types/src/core/: bytes.rs  mod.rs  status.rs  witness_input.rs
rust/logos-blockchain-circuits-types/src/ffi/: bytes.rs  mod.rs  status.rs  witness_input.rs
rust/logos-blockchain-circuits-types/src/native/: bytes.rs  circuit_witness_input.rs  mod.rs  status.rs  witness.rs  witness_input.rs
rust/logos-blockchain-circuits-utils/: Cargo.toml
scripts/: Dockerfile  README.md  build-local.sh  docker-build.sh  gh-hash-to-nix.sh  update-nix-hashes.py
src/: assert.h  circom_adapter.cpp  circom_adapter.hpp  circom_fwd.hpp  common.cpp  ffi.cpp  ffi.hpp  types.hpp
src/poc/: ffi.cpp  ffi.hpp
src/pol/: ffi.cpp  ffi.hpp
src/poq/: ffi.cpp  ffi.hpp
src/signature/: ffi.cpp  ffi.hpp
