[package]
name = "logos-blockchain-circuits-build"
categories.workspace = true
description = "Shared build script logic for Logos Blockchain Circuits sys crates."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
flate2 = { workspace = true }
tar = { workspace = true }
ureq = { workspace = true }
