[package]
name = "logos-blockchain-circuits-common"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
lbc-types = { workspace = true}
