[package]
name = "logos-blockchain-circuits-types"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
libc = { workspace = true }
